- Fixed bug #36949 (invalid internal mysqli objects dtor)